manifests/coder/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder
  namespace: coder
spec:
  parentRefs:
    - kind: Gateway
      group: gateway.networking.k8s.io
      namespace: envoy
      name: envoy-common
      sectionName: localtest-me-https
  hostnames:
    - coder.localtest.me
  rules:
    - name: catch-all
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: coder # Name found from Helm chart's service template file
          kind: Service
          port: 80
      timeouts:
        request: 30s
        backendRequests: 20s
